plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenCentral()
    maven {
        url "https://cursemaven.com"
    }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://maven.createmod.net' }
    maven { url = 'https://maven.ithundxr.dev/snapshots' }
    maven { url = 'https://api.modrinth.com/maven' }
    maven { url = 'https://jitpack.io' }
}

base {
    archivesName = providers.gradleProperty('mod_archive_name').getOrElse(mod_id)
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

// ======================================================================
// Test configuration
// ======================================================================

sourceSets {
    test {
        java {
            srcDir 'src/test/java'
        }
        compileClasspath += sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.runtimeClasspath
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
    additionalRuntimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "curse.maven:beyond-dimensions-1222890:8133342"

    implementation "curse.maven:geckolib-388172:7707149"
    implementation "curse.maven:sodium-394468:6382651"
    implementation "curse.maven:cloth-config-348521:5729127"
    implementation "curse.maven:curios-309927:6529130"
    implementation "curse.maven:kotlin-for-forge-351264:7471280"
    implementation "curse.maven:jei-238222:7420587"
    implementation "curse.maven:sophisticated-core-618298:8140101"
    implementation "curse.maven:sophisticated-storage-619320:8136817"
    implementation "curse.maven:create-328085:7963363"
    implementation "curse.maven:patchouli-306770:7730942"

    implementation "curse.maven:limitless-vehicle-1446269:8068686"
    implementation "curse.maven:touhou-little-maid-355044:8061852"
    implementation "curse.maven:superb-warfare-1218165:8104860"
    implementation "curse.maven:tacz-1-21-1-1353462:8127849"
    implementation "curse.maven:jade-324717:7545219"
    runtimeOnly fileTree(dir: 'libs', include: '*.jar')

    // ── Test dependencies ──
    testImplementation "org.junit.jupiter:junit-jupiter:5.11.0"
    testImplementation "org.mockito:mockito-core:5.12.0"
    testImplementation "org.mockito:mockito-junit-jupiter:5.12.0"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.11.0"
    testImplementation "net.neoforged:neoforge:${neo_version}"

    // ── JMH for microbenchmarks ──
    testImplementation 'org.openjdk.jmh:jmh-core:1.37'
    testAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'

    // ── SQLite for benchmark data persistence ──
    testImplementation 'org.xerial:sqlite-jdbc:3.46.0.0'
}

// ======================================================================
// Test task
// ======================================================================

tasks.named('test', Test).configure {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}

tasks.register('generateBenchmarkReport') {
    group = 'benchmark'
    description = 'Run extreme performance benchmarks and generate benchmark-results.txt'
    dependsOn 'cleanTest'
    doLast {
        println 'Running Benchmark tests...'
    }
    finalizedBy 'runBenchmarks'
}

tasks.register('runBenchmarks', Test) {
    group = 'benchmark'
    description = 'Internal task — run benchmark tests'
    useJUnitPlatform()

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    filter {
        includeTestsMatching '*JmhBenchmarkRunner'
    }
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
    outputs.upToDateWhen { false }
}

tasks.register('startBenchmarkServer', JavaExec) {
    group = 'benchmark'
    description = 'Start the Benchmark data HTTP server'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.rtsbuilding.rtsbuilding.server.benchmark.infrastructure.BenchmarkServer'
}

tasks.register('resetBenchmarkData', JavaExec) {
    group = 'benchmark'
    description = 'Delete ALL benchmark data from the SQLite database'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.rtsbuilding.rtsbuilding.server.benchmark.infrastructure.BenchmarkDatabase'
    args 'reset'
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_credits            : mod_credits,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jar', Jar).configure {
    archiveFileName = "${mod_archive_name}-${mod_version}.jar"
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
